task:create,update,delete

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 <body>
     <section class="section">
         <div class="container">
+            <p>для эйчара)</p>
             {% block content %}{% endblock %}
         </div>
     </section>
