--- a/templates/task_create.html
+++ b/templates/task_create.html
@@ -2,48 +2,59 @@
 
 {% block content %}
 <h1 class="title">Create Task</h1>
-
-<form method="post" class="box">
-    <div class="field">
-        <label class="label" for="title">Title</label>
-        <div class="control">
-            <input type="text" class="input" id="title" name="title" required>
-        </div>
-    </div>
-    <div class="field">
-        <label class="label" for="description">Description</label>
-        <div class="control">
-            <textarea class="textarea" id="description" name="description" required></textarea>
-        </div>
-    </div>
-    <div class="field">
-        <label class="label" for="assigned_to">Assigned To</label>
-        <div class="control">
-            <input type="text" class="input" id="assigned_to" name="assigned_to" required>
-        </div>
-    </div>
-    <div class="field">
-        <label class="label" for="due_date">Due Date</label>
-        <div class="control">
-            <input type="datetime-local" class="input" id="due_date" name="due_date" required>
-        </div>
-    </div>
-    <div class="field">
-        <label class="label" for="status">Status</label>
-        <div class="control">
-            <div class="select">
-                <select id="status" name="status">
-                    <option value="todo">To Do</option>
-                    <option value="in_progress">In Progress</option>
-                    <option value="done">Done</option>
-                </select>
+<div class="box">
+    <form method="post" action="/tasks/create">
+        <div class="field">
+            <label class="label" for="title">Title</label>
+            <div class="control">
+                <input class="input" type="text" id="title" name="title" required>
             </div>
         </div>
-    </div>
-    <div class="field">
-        <div class="control">
-            <button type="submit" class="button is-primary">Create</button>
+        <div class="field">
+            <label class="label" for="description">Description</label>
+            <div class="control">
+                <textarea class="textarea" id="description" name="description" required></textarea>
+            </div>
         </div>
-    </div>
-</form>
+        <div class="field">
+            <label class="label" for="responsible_id">Responsible</label>
+            <div class="control">
+                <div class="select">
+                    <select id="responsible_id" name="responsible_id" required>
+                        <option value="">Select Responsible</option>
+                        {% for responsible in responsibles %}
+                        <option value="{{ responsible.id }}">{{ responsible.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="field">
+            <label class="label" for="status_id">Status</label>
+            <div class="control">
+                <div class="select">
+                    <select id="status_id" name="status_id" required>
+                        <option value="">Select Status</option>
+                        {% for status in statuses %}
+                        <option value="{{ status.id }}">{{ status.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="field">
+            <label class="label" for="due_date">Due Date</label>
+            <div class="control">
+                <input class="input" type="date" id="due_date" name="due_date" required>
+            </div>
+        </div>
+        <div class="field">
+            <div class="control">
+                <button class="button is-primary" type="submit">Create</button>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
+
+
