--- a/templates/task_detail.html
+++ b/templates/task_detail.html
@@ -5,7 +5,9 @@
 <div class="box">
     <h5 class="title is-5">{{ task.title }}</h5>
     <p class="content">{{ task.description }}</p>
-    <p>Status: {{ task.status }}</p>
+    <p>Responsible: {{ task.responsible.name }}</p>
+    <p>Status: {{ task.status.name }}</p>
+    <p>Due Date: {{ task.due_date }}</p>
     <p>Created: {{ task.created_at }}</p>
     <p>Updated: {{ task.updated_at }}</p>
     <div class="buttons">
@@ -15,3 +17,4 @@
     </div>
 </div>
 {% endblock %}
+
