--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -8,6 +8,7 @@
             <th>ID</th>
             <th>Title</th>
             <th>Description</th>
+            <th>Responsible</th>
             <th>Status</th>
             <th>Actions</th>
         </tr>
@@ -18,7 +19,8 @@
             <td>{{ task.id }}</td>
             <td>{{ task.title }}</td>
             <td>{{ task.description }}</td>
-            <td>{{ task.status }}</td>
+            <td>{{ task.responsible.name }}</td>
+            <td>{{ task.status.name }}</td>
             <td>
                 <div class="buttons">
                     <a href="/tasks/{{ task.id }}" class="button is-primary">View</a>
