CRUD for status

--- a/templates/status_create.html
+++ b/templates/status_create.html
@@ -11,6 +11,12 @@
             </div>
         </div>
         <div class="field">
+            <label class="label" for="name">Description</label>
+            <div class="control">
+                <input class="input" type="text" id="description" name="description" required>
+            </div>
+        </div>
+        <div class="field">
             <div class="control">
                 <button class="button is-primary" type="submit">Create</button>
             </div>
