--- a/templates/status_list.html
+++ b/templates/status_list.html
@@ -19,9 +19,10 @@
             <td>{{ status.description }}</td>
             <td>
                 <div class="buttons">
-                    <a href="#" class="button is-primary">View</a>
-                    <a href="#" class="button is-warning">Edit</a>
-                    <a href="#" class="button is-danger">Delete</a>
+                    <a href="/statuses/{{ status.id }}" class="button is-warning">View</a>
+                    <a href="/statuses/{{ status.id }}/edit" class="button is-warning">Edit</a>
+                    <a href="/statuses/{{ status.id }}/delete" class="button is-danger">Delete</a>
+
                 </div>
             </td>
         </tr>
@@ -30,6 +31,6 @@
 </table>
 <div class="buttons">
     <a href="/" class="button is-danger">Home</a>
-    <a href="/tasks/create" class="button is-primary">Create</a>
+    <a href="/statuses/create" class="button is-primary">Create</a>
 </div>
 {% endblock %}
