--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,6 @@
 {% block content %}
 <h1 class="title">Task List</h1>
 <a href="/tasks/" class="button is-warning">Tasks</a>
-<a href="/statuses/" class="button is-warning">Statuses</a>
+<a href="/statuss/" class="button is-warning">Statuses</a>
 <a href="/responsibles/" class="button is-warning">Responsibles</a>
 {% endblock %}
