--- a/templates/status_create.html
+++ b/templates/status_create.html
@@ -3,17 +3,17 @@
 {% block content %}
 <h1 class="title">Create Status</h1>
 <div class="box">
-    <form method="post" action="/statuses/create">
+    <form method="post" action="/statuss/create">
         <div class="field">
             <label class="label" for="name">Name</label>
             <div class="control">
-                <input class="input" type="text" id="name" name="name" required>
+                <input class="input" type="text" id="name" name="name" placeholder="start" required>
             </div>
         </div>
         <div class="field">
             <label class="label" for="name">Description</label>
             <div class="control">
-                <input class="input" type="text" id="description" name="description" required>
+                <input class="input" type="text" id="description" name="description" placeholder="description status" required>
             </div>
         </div>
         <div class="field">
