--- a/templates/responsible_create.html
+++ b/templates/responsible_create.html
@@ -7,7 +7,19 @@
         <div class="field">
             <label class="label" for="name">Name</label>
             <div class="control">
-                <input class="input" type="text" id="name" name="name" required>
+                <input class="input" type="text" id="name" name="name" placeholder="sophie" required>
+            </div>
+        </div>
+        <div class="field">
+            <label class="label" for="email">E-mail</label>
+            <div class="control">
+                <input class="input" type="email" id="email" name="email" placeholder="sophie@example.com" size="30" required>
+            </div>
+        </div>
+        <div class="field">
+            <label class="label" for="phone">Phon xxx-xxx-xxxx:</label>
+            <div class="control">
+                <input class="input" type="text" id="phone" name="phone" placeholder="xxx-xxx-xxxx" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             </div>
         </div>
         <div class="field">
