--- a/templates/status_detail.html
+++ b/templates/status_detail.html
@@ -3,15 +3,13 @@
 {% block content %}
 <h1 class="title">Status Details</h1>
 <div class="box">
-    <h5 class="title is-5">{{ status.name }}</h5>
-    <p class="content">{{ status.description }}</p>
-    
-    <p>Status: {{ status.description }}</p>
+    <h5 class="title is-5">{{ item.name }}</h5>
+    <p class="content">Status: {{ item.description }}</p>
     
     <div class="buttons">
-        <a href="/statuses/{{ status.id }}/edit" class="button is-warning">Edit</a>
-        <a href="/statuses/{{ status.id }}/delete" class="button is-danger">Delete</a>
-        <a href="/statuses/" class="button is-danger">Lists status</a>
+        <a href="/statuss/{{ item.id }}/edit" class="button is-warning">Edit</a>
+        <a href="/statuss/{{ item.id }}/delete" class="button is-danger">Delete</a>
+        <a href="/statuss/" class="button is-danger">Lists status</a>
     </div>
 </div>
 {% endblock %}
