--- a/templates/task_edit.html
+++ b/templates/task_edit.html
@@ -6,13 +6,13 @@
     <div class="field">
         <label class="label" for="title">Title</label>
         <div class="control">
-            <input type="text" class="input" id="title" name="title" value="{{ task.title }}" required>
+            <input type="text" class="input" id="title" name="title" value="{{ item.title }}" required>
         </div>
     </div>
     <div class="field">
         <label class="label" for="description">Description</label>
         <div class="control">
-            <textarea class="textarea" id="description" name="description" required>{{ task.description }}</textarea>
+            <textarea class="textarea" id="description" name="description" required>{{ item.description }}</textarea>
         </div>
     </div>
     <div class="field">
@@ -21,8 +21,8 @@
             <div class="select">
                 <select id="responsible_id" name="responsible_id" required>
                     <option value="">Select Responsible</option>
-                    {% for responsible in responsibles %}
-                    <option value="{{ responsible.id }}" {% if responsible.id == task.responsible_id %}selected{% endif %}>{{ responsible.name }}</option>
+                    {% for responsible in responsible %}
+                    <option value="{{ responsible.id }}" {% if responsible.id == item.responsible_id %}selected{% endif %}>{{ responsible.name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -34,8 +34,8 @@
             <div class="select">
                 <select id="status_id" name="status_id" required>
                     <option value="">Select Status</option>
-                    {% for status in statuses %}
-                    <option value="{{ status.id }}" {% if status.id == task.status_id %}selected{% endif %}>{{ status.name }}</option>
+                    {% for status in status %}
+                    <option value="{{ status.id }}" {% if status.id == item.status_id %}selected{% endif %}>{{ status.name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -44,7 +44,7 @@
     <div class="field">
         <label class="label" for="due_date">Due Date</label>
         <div class="control">
-            <input type="date" class="input" id="due_date" name="due_date" value="{{ task.due_date.strftime('%Y-%m-%d') }}" required>
+            <input type="date" class="input" id="due_date" name="due_date" value="{{ item.due_date.strftime('%Y-%m-%d') }}" required>
         </div>
     </div>
     <div class="field">
@@ -57,4 +57,5 @@
     <a href="/tasks/" class="button is-danger">List Tasks</a>
 </div>
 {% endblock %}
+
 
